--- a/card/src/index.css
+++ b/card/src/index.css
@@ -50,10 +50,21 @@ a:hover {
     overflow: hidden
 }
 
+@media (max-width: 600px) {
+    .App {
+        width: 320px;
+    }
+}
+
 img {
     width: 100%;
     height: auto;
     margin-top: 0;
+}
+
+#picture {
+    overflow: hidden;
+    height: 420px;
 }
 
 .header {
@@ -126,4 +137,75 @@ footer a img:hover {
 
 footer a:last-child {
     margin-right: 0;
+}
+
+
+/* Toggler */
+
+.toggler {
+    display: flex;
+    align-items: center;
+}
+
+.toggler p {
+    font-size: 0.625rem;
+    font-weight: 600;
+}
+
+.toggler--slider {
+    width: 25px;
+    height: 13px;
+    background-color: #2B283A;
+    border-radius: 2rem;
+    margin-inline: 7px;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid black;
+    box-sizing: content-box;
+}
+
+.dark .toggler--slider {
+    border-color: white;
+    background-color: #F5F5F5;
+}
+
+.toggler--slider--circle {
+    height: 13px;
+    width: 13px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.dark .toggler--slider--circle {
+    background-color: black;
+}
+
+.toggler--light {
+    color: #2B283A;
+}
+
+.dark .toggler--light {
+    color: #918E9B;
+}
+
+.toggler--dark {
+    color: #D5D4D8;
+}
+
+.dark .toggler-dark {
+    color: #FFFFFF;
+}
+
+.dark .toggler--slider {
+    justify-content: flex-end;
+}
+
+
+/* dark mode */
+
+.dark {
+    background-color: #000000;
+    color: white;
 }
